# Alma-RS-lending-request-automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  resource_sharing_forms_processor.py  test_user_retrieval.py
.a5c/cache/compression/: beb0db7b7afeab59.json
.a5c/processes/: pii-leak-isolation-inputs.json  pii-leak-isolation.js  task-scheduler-migration.diagram.md  task-scheduler-migration.js  task-scheduler-migration.process.md
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/: inputs.json  run.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/journal/: 000001.01KM36EW83C3V9KMHAWCVEHH7Q.json  000002.01KM36FS3Y7019STM24WDXK5A3.json  000003.01KM36KWY8W4BC4SNT2WD73GVF.json  000004.01KM36M4YGGE956JQ1Q78BYYRE.json  000005.01KM36PSMB0D6AC5Q876BZSKNE.json  000006.01KM36Q2H7DKQYKE35HDAWECWD.json  000007.01KM36WSV65M3Z4HV48YYV7WR5.json  000008.01KM36X129YV67ECB94T09A2HQ.json  000009.01KM36Y9DTVBCZDX6G971TBRCK.json  000010.01KM36YEZ4W8T0CAXGM7YFV38J.json  000011.01KM36YX3P0MQP9X5PNBW9ER84.json  000012.01KM36Z4J0WD5HAX23N7QKK1ZT.json  000013.01KM371SDPZ39Q0ADMENQRKZDW.json  000014.01KM37208QW7MZ3YTZXJ57M3ST.json  000015.01KM373GHZF96VTSTR7EAB6W25.json  000016.01KM373P4TMKBT8ET3397HDV23.json  000017.01KM378V6JKCDNPVF686QCEP44.json  000018.01KM3791NNDTJ2VZDY62NNX49E.json  000019.01KM379C7CH51V6RVXSR7458VE.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM36FS3FYN5R910NVE0T015S/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM36M4Y5S3Q56AC24J15R7EM/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM36Q2GVY5QEXD8E6SPB3D7T/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM36X11XP3B9RFEFYRPEYJR1/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM36YEYS8TJDJS40GFWTBNV2/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM36Z4HNRDZVPGC8E2WJAK4V/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM37208BJJ42K4DMR7HET0V4/: output.json  result.json  task.json
.a5c/runs/01KM36EW7AHWHF8CMG1JNW7757/tasks/01KM373P4EPE8DQ4JRGX0BJBKS/: output.json  result.json  task.json
batch/: rs_forms_monitor_sandbox.bat  rs_forms_scheduled.bat  rs_forms_scheduled_dev_sb.bat  rs_forms_scheduled_sandbox.bat
config/: rs_forms_config.example.json
docs/: IDENTIFIER_DETECTION.md  TASK_SCHEDULER_SETUP.md  almaapitk-audit.md  masedet-prod-runbook.md
docs/superpowers/plans/: 2026-05-24-pii-leak-isolation.md
docs/superpowers/specs/: 2026-05-24-pii-leak-isolation-design.md
scripts/: rollback.sh  smoke_project.py
tests/: live_smoke_data.example.json  test_citation_metadata.py  test_imports.py  test_l2_citation_golden.py  test_live_smoke.py  test_move_to_processed.py  test_pii_logging.py  test_resource_sharing_lending.py  test_user_retrieval_masking.py
tests/golden/: l2_citation_params.json
