[tool.poetry]
name = "alma-rs-lending-request-automation"
version = "1.0.0"
description = "Automated processing of Resource Sharing lending requests from Microsoft Forms to Alma ILS"
authors = ["Hagay Bar-Or <hagaybar@tauex.tau.ac.il>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# AlmaAPITK package from PyPI (https://pypi.org/project/almaapitk/)
almaapitk = ">=0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
